SERVER-97409 Populate planCacheKey in CurOp for count() commands (#32104)

GitOrigin-RevId: 872d4653374cf17c89b64814b772b1159bd21524