jstests/core/administrative/profile/profile_distinct.js
@@ -40,6 +40,8 @@ assert.eq(profileObj.ns, coll.getFullName(), tojson(profileObj));
 assert.eq(profileObj.op, "command", tojson(profileObj));
 assert.eq(profileObj.keysExamined, 5, tojson(profileObj));
 assert.eq(profileObj.docsExamined, 5, tojson(profileObj));
+assert(profileObj.hasOwnProperty("queryHash"), tojson(profileObj));
+assert(profileObj.hasOwnProperty("planCacheKey"), tojson(profileObj));
 assert.eq(profileObj.planSummary, "IXSCAN { b: 1 }", tojson(profileObj));
 assert(profileObj.execStats.hasOwnProperty("stage"), tojson(profileObj));
 assert.eq(profileObj.protocol, "op_msg", tojson(profileObj));
